# usic

./: .clang-format  .gitignore  .inferconfig  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs  project-words.txt  usic
include/: building_flags.hpp  callback.hpp  commands.hpp  components.hpp  config.hpp  constants.hpp  core.hpp  music_list.hpp  runtime.hpp  utils.hpp
macos/usic-macos-media/: main.swift
scripts/: demo.sh  uninstall.sh  usic_add_to_list.sh  usic_create_default_playList.sh  usic_play.sh  usic_play_list.sh  usic_remove_from_list.sh
src/: Makefile  app.h  callback.cpp  client.c  client.cc  client.h  commands.cc  commands.cpp  commands.h  config.h  config.rs  core.cc  core.cpp  core.h  fuzzy.rs  ipc.rs  lib.rs  library.rs  log.cc  log.h  main.c  main.cc  main.cpp  main.rs  miniaudio.c  miniaudio_impl.cc  musicList.c  musicList.h  music_list.cc  music_list.h  named_pipe.cc  named_pipe.h  playlist.rs  runtime.cc  runtime.cpp  runtime.h  runtime_path.h  server.c  server.cc  server.h  (+13 more)
src/server/: macos.rs  mod.rs  player.rs  playlist.rs
src/tui/: input.rs  list.rs  mod.rs  render.rs
tests/: CMakeLists.txt  music_list.txt  test_music_list.cc  test_music_list.cpp
tests/playLists/: music_list.txt
