[package]
name = "usic"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
nucleo-matcher = "0.3"
rand = "0.8"
ratatui = "0.29"
rodio = { version = "0.21", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

[lib]
name = "usic"
path = "src/lib.rs"

[[bin]]
name = "usic"
path = "src/main.rs"

[[bin]]
name = "usic-server"
path = "src/bin/usic-server.rs"

[[bin]]
name = "usic-tui"
path = "src/bin/usic-tui.rs"
